-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.7.7
=====
- orm
  - [feature] Added prefix_with() method
    to Query, calls upon select().prefix_with()
    to allow placement of MySQL SELECT
    directives in statements.  Courtesy
    Diana Clarke [ticket:2443]

  - [bug] Fixed bug in 0.7.6 introduced by 
    [ticket:2409] whereby column_mapped_collection
    used against columns that were mapped as
    joins or other indirect selectables
    would fail to function.

  - [feature] Added new flag to @validates
    include_removes.  When True, collection
    remove and attribute del events
    will also be sent to the validation function,
    which accepts an additional argument
    "is_remove" when this flag is used.

  - [bug] Fixed bug whereby polymorphic_on
    column that's not otherwise mapped on the 
    class would be incorrectly included
    in a merge() operation, raising an error.
    [ticket:2449]

  - [bug] Fixed bug in expression annotation
    mechanics which could lead to incorrect
    rendering of SELECT statements with aliases
    and joins, particularly when using 
    column_property().  [ticket:2453]

  - [bug] Fixed bug which would prevent
    OrderingList from being pickleable
    [ticket:2454].  Courtesy Jeff Dairiki

  - [bug] Fixed bug in relationship comparisons
    whereby calling unimplemented methods like
    SomeClass.somerelationship.like() would
    produce a recursion overflow, instead
    of NotImplementedError.

- sql
  - [bug] Removed warning when Index is created
    with no columns; while this might not be what 
    the user intended, it is a valid use case 
    as an Index could be a placeholder for just an 
    index of a certain name.

  - [feature] Added new connection event
    dbapi_error(). Is called for all DBAPI-level
    errors passing the original DBAPI exception
    before SQLAlchemy modifies the state 
    of the cursor.

  - [bug] If conn.begin() fails when calling